--- a/style.css
+++ b/style.css
@@ -551,36 +551,13 @@
 }
 
 /* media Screens */
-@media(max-width:992px){
+@media(min-width:992px) and (max-width:1200px){
     .section_m2 {
         margin: 10px 0;
     }
-    #closed{
-        display:block;
-    }
-    #nav {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        justify-content: flex-start;
-        position: fixed;
-        top: 0;
-        right: -300px;
-        height: 100vh;
-        width: 300px;
-        background-color: white;
-        box-shadow: 0 40px 60px rgba(0,0,0,0.1);
-        padding:80px 0 0 10px ;
-    }
-    #nav.selected{
-        right: 0px;
-    }
-    #nav li{
-        margin:0 0 20px 0;
-    }
+    
     .mobile{
-        display: flex;
-        justify-content: center;
+        display: none;
     }
     .mobile i {
         margin: 0 10px;  
@@ -593,7 +570,7 @@
     #hero{
         height: 70vh;  
         padding: 0px 80px;
-        background-position: top 30% right 30%;
+        background-position: top 30% right 40%;
       }
     #features {
         justify-content: center;
@@ -655,6 +632,29 @@
      
 }
 @media(max-width:576px){
+    #closed{
+        display:block;
+    }
+    #nav {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        position: fixed;
+        top: 0;
+        right: -300px;
+        height: 100vh;
+        width: 300px;
+        background-color: white;
+        box-shadow: 0 40px 60px rgba(0,0,0,0.1);
+        padding:80px 0 0 10px ;
+    }
+    #nav.selected{
+        right: 0px;
+    }
+    #nav li{
+        margin:0 0 20px 0;
+    }
     #closed{
         display:block;
     }
@@ -720,6 +720,22 @@
     }
     .news_updates h1 {
         font-size: 20px;
+    }
+    .section_p1 {
+        padding: 40px 20px;
+    }
+    .banner1 {
+        width: 100%;
+        padding: 20px 10px;
+        background-position: top 10% right 40%;
+        height: 35vh;
+        
+    }
+    .banner2 {
+        width: 100%;
+        padding: 20px 10px;
+        background-position: top 10% right 40%;
+        height: 35vh;
     }
 }
 /* shop.html */
