--- a/style.css
+++ b/style.css
@@ -836,7 +836,7 @@
 .product_img_content p{
    line-height: 1.2;
 }
-@media(max-width:992px){
+@media(max-width:768px){
   #product_img_container{
     display: flex;
     flex-direction: column;
@@ -917,7 +917,7 @@
 #blogPages .blog_card .blog_content a:hover{
     color: #088178;
 }
-@media(max-width:992px){
+@media(min-width:768px) and (max-width:1200px){
     #blogPages .blog_card .blog_content h1 {
         font-size: 20px;
     }
