--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@
     align-items: center;
     position:sticky;
     top: 0;
+    box-shadow: 20px 20px 20px rgba(23, 19, 19, 0.3);
 }
 #nav{
     display: flex;
